# vortex-sspi

./: .gitignore  Cargo.toml  VortexSspi.slnx
.github/workflows/: publish.yml
crates/provider-gatekeeper/: Cargo.toml
crates/provider-gatekeeper/src/: base_provider.rs  gatekeeper.rs  gatekeeper_passport.rs  gatekeeper_session_manager.rs  lib.rs  ntlm.rs  ntlm_passport.rs  passport.rs  passport_session_managers.rs  session_manager.rs  utils.rs
crates/provider-ntlm/: Cargo.toml
crates/provider-ntlm/src/: lib.rs
crates/sspi-core/: Cargo.toml
crates/sspi-ffi/: Cargo.toml  build.rs
crates/sspi-ffi/src/: lib.rs
dotnet/Vortex.Sspi/: NativeMethods.g.cs  SspiSession.cs  Vortex.Sspi.csproj
dotnet/Vortex.Sspi.Test/: LiteIrcdServer.cs  Program.cs  Vortex.Sspi.Test.csproj
